# pglite

./: .gitignore  Cargo.toml  LICENSE.md  README.md
src/: config.rs  connection.rs  main.rs  query_handler.rs  server.rs
src/auth/: basic_authenticator.rs  mod.rs
src/backend/: mod.rs  simple_backend.rs
