[package]
name = "pglite"
version = "0.1.0"
edition = "2021"
authors = ["Adam Strickland"]
description = "A server app that exposes SQLite databases over a Postgres connection"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pgwire = "0.16.0"
rusqlite = { version="0.29.0", features = ["bundled", "column_decltype"] }
futures-sink = "0.3.28"
futures-util = "0.3.28"
async-trait = "0.1.72"
futures = "0.3.28"
tokio = { version="1.30.0", features = ["full"] }
tokio-rustls = "0.24.1"
tokio-util = "0.7.8"
bytes = "1.4.0"
uuid = { version="1.4.1", features = [ "v4", "fast-rng", "macro-diagnostics" ] }
crossbeam-channel = "0.5.8"
clap = { version = "4.3.23", features = [ "derive", "env"] }
log = "0.4.20"
simplelog = { version = "^0.12.1", features = ["paris"] }